# eqx

./: .gitignore  CMakeLists.txt  Makefile  README.md  eqx.sln  make.bat
.devcontainer/: devcontainer.json
scripts/: magefile.go
src/: hello.cpp
src/common/: CMakeLists.txt  Makefile  eqg_loader.cpp  eqg_v4_loader.cpp  pfs.cpp  s3d_geometry.h  s3d_loader.cpp  s3d_loader.h  toml.hpp  wld_fragment.cpp  wld_fragment.h
src/common/q3bsp/: BspMap.hpp  Q3BspLoader.cpp  Q3BspLoader.hpp  Q3BspMap.cpp  Q3BspMap.hpp  Q3BspRenderHelpers.hpp  q3bsp.h
src/eqx/: CMakeLists.txt  Makefile  eqx.cpp  eqx.h
src/log/: Makefile  log_file.cpp  log_stdout.cpp
