CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2)

PROJECT(eqx)

SET(EQEMU_LOG_LEVEL 2)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

FIND_PACKAGE(ZLIB REQUIRED)

IF(NOT CMAKE_BUILD_TYPE)
	SET(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING "Choose the type of build." FORCE)
ENDIF(NOT CMAKE_BUILD_TYPE)

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
SET(CMAKE_PREFIX_PATH "${CMAKE_CURRENT_SOURCE_DIR}/external" "${CMAKE_PREFIX_PATH}")

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/vcpkg/installed/x64-windows/include")
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/dependencies/glm/glm")
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/src/log/")
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/src/common/")

ADD_SUBDIRECTORY(src/log)
ADD_SUBDIRECTORY(src/common)
ADD_SUBDIRECTORY(src/eqx)