CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2)

SET(eqx_sources
	eqx.cpp
)

SET(eqx_headers
    eqx.h
)

FIND_PACKAGE(ZLIB REQUIRED)

ADD_EXECUTABLE(eqx ${eqx_sources} ${eqx_headers})

INSTALL(TARGETS eqx RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})

TARGET_LINK_LIBRARIES(eqx PRIVATE common)
TARGET_LINK_LIBRARIES(eqx PRIVATE log)
TARGET_LINK_LIBRARIES(eqx PRIVATE ZLIB::ZLIB)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)